# translarr

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  LICENSE  README.md  ca_profile.xml  docker-compose.yml  pyproject.toml
.beads/: issues.jsonl  metadata.json
.github/workflows/: ci.yml
.serena/: project.yml
docs/: A11Y-AUDIT-2026-05-14.md  ARCHITECTURE.md  COMPETITIVE-ANALYSIS.md  EMBY-WORKFLOW.md  INSTALL.md  PLAN-v0.1.6.md  PRODUCT-DEEP-DIVE.md
plugins/emby/: .gitignore  Models.cs  Plugin.cs  README.md  Translarr.Emby.csproj  Translarr.Emby.sln  TranslarrHttpClient.cs  build.md
plugins/emby/Api/: TranslateController.cs
plugins/emby/Configuration/: PluginConfiguration.cs
plugins/emby/ScheduledTasks/: BatchTranslateTask.cs
plugins/emby/Subtitles/: TranslarrSubtitleProvider.cs
plugins/emby/Web/: translarrconfig.html  translarrconfig.js
plugins/jellyfin/: README.md
server/: async_utils.py  browse.py  candidates.py  config.py  cost_tracker.py  db.py  glossary.py  library_refresh.py  main.py  models.py  notifications.py  series_config.py  settings_store.py
server/llm/: anthropic_provider.py  base.py  deepseek_provider.py  gemini_provider.py  ollama_provider.py  openai_provider.py  router.py
server/queue/: __init__.py  base.py  sqlite.py  worker.py
server/subs/: extract.py  pipeline.py  quality.py  reading_rate.py
server/webhooks/: common.py  emby.py  jellyfin.py  plex.py  queue.py  radarr.py  security.py  sonarr.py
templates/: ca_profile.xml  translarr.xml
tests/: conftest.py  test_async_utils.py  test_browse.py  test_candidates.py  test_cost_tracker.py  test_emby_playback_webhook.py  test_endpoints_async.py  test_endpoints_jobs_list_stats.py  test_extract.py  test_extract_helpers.py  test_glossary.py  test_health.py  test_library_refresh.py  test_llm_base.py  test_new_features.py  test_notifications.py  test_output_collision.py  test_pause_setting.py  test_pipeline_bitmap_terminal_skip.py  test_pipeline_count_reconcile.py  test_quality.py  test_queue_retry_claim.py  test_queue_sqlite.py  test_reading_rate.py  test_series_api.py  test_series_config.py  test_settings_store.py  test_sidecar_discovery.py  test_test_ntfy_endpoint.py  test_translate_sync_provider_mode.py  test_trust_and_safety.py  test_webhook_series_overrides.py  test_webhooks.py  test_webhooks_common.py  test_webhooks_tags.py  test_worker_terminal_skips.py
ui/: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
ui/src/: app.html
(+11 files in other folders)
