[project]
name = "translarr"
version = "0.1.0"
description = "AI-powered subtitle translation for the arr stack"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Jed Esposito" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "pysubs2>=1.7",
  "anthropic>=0.40",
  "openai>=1.55",
  "httpx>=0.27",
  "structlog>=24.4",
  "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "ruff>=0.8",
  "mypy>=1.13",
  "httpx>=0.27",
  "respx>=0.21",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
# Strict enough to catch real bugs without bikeshedding over typing minutiae.
# Tests are excluded — they rely on monkeypatching and stub fixtures that
# would require extensive Protocol definitions to type cleanly.
files = ["server"]
warn_unused_ignores = true
no_implicit_optional = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["server*"]
exclude = ["plugins*", "tests*"]
